fixed problem statement alignment

--- a/react_frontend/src/Components/CodeProblem/CodeProblem.css
+++ b/react_frontend/src/Components/CodeProblem/CodeProblem.css
@@ -1,11 +1,10 @@
-.code-problem{
+.code-problem {
     width: 100%;
     height: 90vh;
-    border: 4px solid #ccc;
+    border: 8px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
